turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:48: error: type mismatch;
 found   : Array[Int]
 required: Int
	r = rule(state)(c)
                       ^